--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
         <div class="home-img">
             <div class="img-box">
                 <div class="img-item">
-                    {{-- <img src="{{ asset('images/home.png') }}" alt=""> --}}
-                    <img src="{{ Vite::asset('resources/images/foto.png') }}" alt="">
+                    <!-- {{-- <img src="{{ asset('images/home.png') }}" alt=""> --}} -->
+                    <img src="images/foto.png" alt="">
                 </div>
             </div>
         </div>
