--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <div class="img-box">
                 <div class="img-item">
                     <!-- {{-- <img src="{{ asset('images/home.png') }}" alt=""> --}} -->
-                    <img src="images/foto.png" alt="">
+                    <img src="foto.png" alt="">
                 </div>
             </div>
         </div>
